# geo-orchestrator

./: .env.example  .gitignore  BANCA_CLEVEL_GEO_ORCHESTRATOR_LOG.txt  CLAUDE.md  META_AUDIT_GEO_ORCHESTRATOR_LOG.txt  README.md  cli.py  conftest.py  pyproject.toml
.github/workflows/: tests.yml
catalog/: model_catalog.yaml
docs/: ARCHITECTURE.md  AUDIT_2026-04-07.md  GEO_50_CONCEITOS_CANONICAL.md  MANUAL.md  REFACTOR_2026-04-07.md  RFC-ORCHESTRATOR-REFACTORING.md  ROADMAP_2026Q2-Q4.md  ROUND3_IMPROVEMENTS.md
docs/e2e_battery_20260513/: REPORT.md  ping.txt  (+11 more)
geo_orchestrator_sdk/: __init__.py
scripts/: audit_billing.py  audit_full.py  check_billing_apis.py  gen_herreira_pdf.py  gen_herreira_pptx.py  implement_improvements.py  round3_deep_improvements.py  round4_audit_and_page.py  round5_complement.py  run_5llm_board.py  test_5llm_ping.py  test_anthropic_tiers.py
src/: adaptive_decomposer.py  alerts.py  catalog_loader.py  circuit_breaker.py  code_executor.py  config.py  connection_pool.py  cost_calibrator.py  cost_tracker.py  dashboard_html.py  finops.py  health_server.py  kpi_history.py  llm_client.py  models.py  orchestrator.py  performance_router.py  pipeline.py  prompt_refiner.py  prompt_registry.py  quality_judge.py  rate_limiter.py  router.py  sanitize.py  semantic_cache.py  smart_router.py  tracer.py  unified_finops.py
tests/: test_core.py  test_e2e.py  test_finops_sqlite.py  test_integration.py  test_no_deprecated_models.py  test_prompt_registry.py  test_resilience_outage.py  test_sdk.py  test_sprint3.py  test_sprint4.py  test_sprint5.py  test_sprint7.py
(+21 files in other folders)
