[project]
name = "geo-orchestrator"
version = "1.0.0"
description = "Multi-LLM orchestrator for GEO research and content production"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "pydantic>=2.0",
    "rich>=13.7",
    "python-dotenv>=1.0",
]

[project.scripts]
geo-orchestrator = "cli:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
# Sprint 6 (2026-04-08): scripts/ contem smoke scripts de rede com funcoes
# `test_*` que NAO sao pytest cases — sao chamadas via asyncio.run em main().
# Restringir coleta a tests/ evita falsos negativos no CI.
testpaths = ["tests"]
